# coursework_5_posgres_Minin_ES

./: .coverage  .env  main.py  pyproject.toml
create_tables/: create_employers_table.py
data_file/: data_employers.csv  data_vacancies.csv
src/: search_employer_api.py  vacancies_search_id.py  working_with_database.py
tests/: test_search_employer_api.py  test_vacancies_search_id.py
